--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,8 +25,8 @@ jobs:
         run: hugo --minify
 
       - name: Deploy the site
-        run: |
-          echo benmatselby.github.io        > CNAME
+        run: echo demo.breathelife.org.my > ./public/CNAME
+          
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
