--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -6,7 +6,7 @@ videos:
       video_thumb: "images/home/video.jpeg"
       text: 'Overview'
     - video: "PxUnHgw0fgk"
-      video_thumb: "images/home/video.jpeg"
+      video_thumb: "images/home/video2.jpeg"
       text: 'Education'
 
 banner:
